--- a/README
+++ b/README
@@ -52,4 +52,4 @@ To-Do:
     Integrate new bursty wlg. 
 
 Note:
-    Sending messages to external networks is going to be hard without enabling port forwarding on router. Find workaround. 
+    Sending messages to external networks is going to be hard without enabling port forwarding on router. Find workaround. Reverse Shell type approach. VPN. 
